--- a/app/views/incomes_and_expenses/new.html.erb
+++ b/app/views/incomes_and_expenses/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New IncomesAndExpenses#new</h1>
 
-<%= render 'form', income_and_expense: @income_and_expense %>
+<%= render 'form', Income: @income %>
 
-<%= link_to 'Back', income_and_expense_path %>
+<%= link_to 'Back', incomes_path %>
+
+<%= render 'form', Exprese: @exprese %>
+
+<%= link_to 'Back', expreses_path %>
