--- a/app/views/incomes_and_expenses/index.html.erb
+++ b/app/views/incomes_and_expenses/index.html.erb
@@ -1,2 +1,55 @@
-<h1>IncomesAndExpenses#index</h1>
-<p>Find me in app/views/incomes_and_expenses/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Income</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Price</th>
+      <th>Expense_date</th>
+      <th>User_id</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @income.each do |income| %>
+      <tr>
+        <td><%= income.price %></td>
+        <td><%= income.expense_date %></td>
+        <td><%= income.user_id %></td>
+        <td><%= link_to 'Show', incomes_and_expenses_show_path %></td>
+        <td><%= link_to 'Edit', incomes_and_expenses_edit_path %></td>
+        <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+
+  <h1>Expense</h1>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Price</th>
+        <th>Expense_date</th>
+        <th>User_id</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+  <tbody>
+    <% @expense.each do |expense| %>
+      <tr>
+        <td><%= expense.price %></td>
+        <td><%= expense.expense_date %></td>
+        <td><%= expense.user_id %></td>
+        <td><%= link_to 'Show', incomes_and_expenses_show_path %></td>
+        <td><%= link_to 'Edit', incomes_and_expenses_edit_path %></td>
+        <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Book', incomes_and_expenses_new_path %>
