--- a/app/views/incomes_and_expenses/new.html.erb
+++ b/app/views/incomes_and_expenses/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New IncomesAndExpenses#new</h1>
-
+<h1>Income</h1>
 <%= render 'form', Income: @income %>
 
-<%= link_to 'Back', incomes_path %>
+<h1>Exprese</h1>
+<%= render 'form', Expense: @expense %>
 
-<%= render 'form', Exprese: @exprese %>
+<%= link_to 'Back', incomes_and_expenses_index_path %>
 
-<%= link_to 'Back', expreses_path %>
+
