--- a/app/views/incomes_and_expenses/show.html.erb
+++ b/app/views/incomes_and_expenses/show.html.erb
@@ -1,2 +1,43 @@
-<h1>IncomesAndExpenses#show</h1>
-<p>Find me in app/views/incomes_and_expenses/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @income.price %>
+</p>
+
+<p>
+  <strong>Expense_date:</strong>
+  <%= @income.expense_date %>
+</p>
+
+<p>
+  <strong>User_id:</strong>
+  <%= @income.user_id %>
+</p>
+
+
+
+<%= link_to 'Edit', incomes_and_expenses_edit_path(@income) %> |
+<%= link_to 'Back', incomes_and_expenses_index_path %>
+
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @expense.price %>
+</p>
+
+<p>
+  <strong>Expense_date:</strong>
+  <%= @expense.expense_date %>
+</p>
+
+<p>
+  <strong>User_id:</strong>
+  <%= @expense.user_id %>
+</p>
+
+
+
+<%= link_to 'Edit', incomes_and_expenses_edit_path(@expense) %> |
+<%= link_to 'Back', incomes_and_expenses_index_path %>
